# duckduckgo-apple

./: .gitignore  .gitmodules  .swiftlint.yml  AGENTS.md  Gemfile  HANDOFF.md  README.md  Tab-Stubs-implementation-plan.md  Tab-suspending-implementation-plan.md  cert.pem  feature_flag_validation_report.md  hide-tab-bar-while-scrolling-spec.md  ipad-top-chrome-context.md  key.pem  local-server.sh  loop.html  package-lock.json  package.json  project_log.md  redirect-to-x-safari.html  serve_https.py  swipe-up-implemenation-spec.md  test-x-safari-redirect.html
.cursor/: BUGBOT.md
.deployit/: ExportOptions.ios.plist
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.maestro/: common.sh  config-sync  run_ui_tests.sh  setup_ui_tests.sh
.storyhook/: CLAUDE.md  project.toml
DuckDuckGo.xcworkspace/: contents.xcworkspacedata
docs/: abn-experiment-framework.md  analytics-patterns.md  anti-patterns.md  app-lifecycle-state-machine.md  architecture.md  branch-naming-conventions.md  browserserviceskit-integration.md  code-style.md  design-system-designresourceskit.md  development-commands.md  device-build-personal-team.md  duckplayer-userscript-integration.md  duckplayer.md  feature-flags-addition.md  feature-flags.md  general.md  import-hygiene.md  instrumentation-facades.md  ios-architecture.md  logging-guidelines.md  (+25 more)
macOS/metrics_aggregator_rust/: Cargo.toml  README.md  cbindgen.toml
macOS/metrics_aggregator_rust/include/: MetricsAggregatorRust.h  module.modulemap
macOS/metrics_aggregator_rust/scripts/: build-macos.sh
macOS/metrics_aggregator_rust/src/: lib.rs
(+5594 files in other folders)
