[package]
name = "metrics_aggregator"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed metrics aggregator for pixel emission (C FFI for Swift)"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
